--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 </div>
 
 <img class="banner-image active" src="https://i.pinimg.com/1200x/3a/dd/f4/3addf4789e2bde5e6c1166c249b15b96.jpg" alt="Banner Image 1">
-<img class="banner-image" src="https://dummyimage.com/1200x100/cccccc/000000.png&text=Special+Offers!" alt="Banner Image 2">
+<img class="banner-image" src="https://th.bing.com/th/id/R.6d58b2b4fd495ee65e98820d3b73f7c9?rik=j%2fXvcYtiW9o0rA&riu=http%3a%2f%2fsunsetsxm.com%2fwp-content%2fuploads%2f2016%2f07%2fHorizontal-ad.jpg&ehk=Jx7RF1ZMHlWIreR%2bY1oWSBfjoajVTviY4KKQ9AHgGtk%3d&risl=&pid=ImgRaw&r=0" alt="Banner Image 2">
 <div class="store">
     <h1>Melagis - Nauji ir švieži</h1>
     <div class="thumbnails" id="thumbnails"></div>
@@ -241,3 +241,4 @@ setInterval(fadeBannerImages, 5000);
 </body>
 
 </html>
+
