--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 .banner-image {
     position: absolute;
     width: 100%;
-    height: 150px;
+    height: 100%;
     object-fit: cover;
     opacity: 0;
     transition: opacity 1s ease-in-out; /* Smooth transition */
@@ -241,5 +241,6 @@ setInterval(fadeBannerImages, 5000);
 </body>
 
 </html>
+
 
 
