--- a/index.html
+++ b/index.html
@@ -40,24 +40,11 @@
             outline: none;
         }
         .banner {
-    position: relative;
-    width: 100%;
-    height: 70px;
-    overflow: hidden;
-}
-
-.banner-image {
-    position: absolute;
-    width: 100%;
-    height: 70px;
-    object-fit: cover;
-    opacity: 0;
-    transition: opacity 1s ease-in-out; /* Smooth transition */
-}
-
-.banner-image.active {
-    opacity: 1; /* Only the active image is visible */
-}
+            width: 100%;
+            height: 200px;
+            background: url('https://dummyimage.com/1200x100/cccccc/000000.png&text=Special+Offers!') center/cover;
+            margin: 20px 0;
+        }
         .store {
             text-align: center;
             margin: 20px;
@@ -143,8 +130,7 @@
     </div>
 </div>
 
-<img class="banner-image active" src="https://i.pinimg.com/1200x/3a/dd/f4/3addf4789e2bde5e6c1166c249b15b96.jpg" alt="Banner Image 1">
-<img class="banner-image" src="https://th.bing.com/th/id/R.6d58b2b4fd495ee65e98820d3b73f7c9?rik=j%2fXvcYtiW9o0rA&riu=http%3a%2f%2fsunsetsxm.com%2fwp-content%2fuploads%2f2016%2f07%2fHorizontal-ad.jpg&ehk=Jx7RF1ZMHlWIreR%2bY1oWSBfjoajVTviY4KKQ9AHgGtk%3d&risl=&pid=ImgRaw&r=0" alt="Banner Image 2">
+<div class="banner" style="background-image: url('https://i.pinimg.com/1200x/3a/dd/f4/3addf4789e2bde5e6c1166c249b15b96.jpg');"></div>
 <div class="store">
     <h1>Melagis - Nauji ir švieži</h1>
     <div class="thumbnails" id="thumbnails"></div>
@@ -220,27 +206,12 @@
 
     setInterval(loadThumbnails, 5000); // Change thumbnails every 5 seconds
     loadThumbnails(); // Initial load
-// Fading Banner Functionality
-const bannerImages = document.querySelectorAll('.banner-image');
-let currentImageIndex = 0;
 
-// Function to fade in and out banner images
-function fadeBannerImages() {
-    bannerImages[currentImageIndex].classList.remove('active'); // Hide current image
-    currentImageIndex = (currentImageIndex + 1) % bannerImages.length; // Move to next image
-    bannerImages[currentImageIndex].classList.add('active'); // Show next image
-}
-
-// Initialize the first image as active
-bannerImages[currentImageIndex].classList.add('active');
-
-// Set interval for image transitions every 5 seconds
-setInterval(fadeBannerImages, 5000);
 </script>
 
 </body>
-
 </html>
+
 
 
 
